lang/parsing/parser.output

state 0
	$accept: .spec $end 

	DATA  shift 8
	CONST  shift 10
	MODULE  shift 9
	PROC  shift 11
	INIT  shift 12
	.  error

	spec  goto 1
	toplevel_body  goto 2
	data_def  goto 3
	module_def  goto 4
	const_def  goto 5
	proc_def  goto 6
	init_block  goto 7

state 1
	$accept:  spec.$end 

	$end  accept
	.  error


state 2
	spec:  toplevel_body.    (1)
	spec:  toplevel_body.spec 

	DATA  shift 8
	CONST  shift 10
	MODULE  shift 9
	PROC  shift 11
	INIT  shift 12
	.  reduce 1 (src line 134)

	spec  goto 13
	toplevel_body  goto 2
	data_def  goto 3
	module_def  goto 4
	const_def  goto 5
	proc_def  goto 6
	init_block  goto 7

state 3
	toplevel_body:  data_def.    (3)

	.  reduce 3 (src line 149)


state 4
	toplevel_body:  module_def.    (4)

	.  reduce 4 (src line 151)


state 5
	toplevel_body:  const_def.    (5)

	.  reduce 5 (src line 152)


state 6
	toplevel_body:  proc_def.    (6)

	.  reduce 6 (src line 153)


state 7
	toplevel_body:  init_block.    (7)

	.  reduce 7 (src line 154)


state 8
	data_def:  DATA.IDENTIFIER { idents_one } ; 

	IDENTIFIER  shift 14
	.  error


state 9
	module_def:  MODULE.IDENTIFIER ( parameters_zero ) { module_body_zero } ; 

	IDENTIFIER  shift 15
	.  error


state 10
	const_def:  CONST.IDENTIFIER type ASSIGN expr ; 

	IDENTIFIER  shift 16
	.  error


state 11
	proc_def:  PROC.IDENTIFIER ( parameters_zero ) { statements_zero } ; 

	IDENTIFIER  shift 17
	.  error


state 12
	init_block:  INIT.{ initvars_zero } ; 

	{  shift 18
	.  error


state 13
	spec:  toplevel_body spec.    (2)

	.  reduce 2 (src line 141)


state 14
	data_def:  DATA IDENTIFIER.{ idents_one } ; 

	{  shift 19
	.  error


state 15
	module_def:  MODULE IDENTIFIER.( parameters_zero ) { module_body_zero } ; 

	(  shift 20
	.  error


state 16
	const_def:  CONST IDENTIFIER.type ASSIGN expr ; 

	IDENTIFIER  shift 22
	CHANNEL  shift 24
	UNSTABLE  shift 25
	[  shift 23
	.  error

	type  goto 21

state 17
	proc_def:  PROC IDENTIFIER.( parameters_zero ) { statements_zero } ; 

	(  shift 26
	.  error


state 18
	init_block:  INIT {.initvars_zero } ; 
	initvars_zero: .    (18)

	IDENTIFIER  shift 30
	.  reduce 18 (src line 201)

	initvars_zero  goto 27
	initvars_one  goto 28
	initvar  goto 29

state 19
	data_def:  DATA IDENTIFIER {.idents_one } ; 

	IDENTIFIER  shift 32
	.  error

	idents_one  goto 31

state 20
	module_def:  MODULE IDENTIFIER (.parameters_zero ) { module_body_zero } ; 
	parameters_zero: .    (90)

	IDENTIFIER  shift 36
	.  reduce 90 (src line 503)

	parameters_zero  goto 33
	parameters_one  goto 34
	parameter  goto 35

state 21
	const_def:  CONST IDENTIFIER type.ASSIGN expr ; 

	ASSIGN  shift 37
	.  error


state 22
	type:  IDENTIFIER.    (102)

	.  reduce 102 (src line 561)


state 23
	type:  [.] type 

	]  shift 38
	.  error


state 24
	type:  CHANNEL.{ types_one } 
	type:  CHANNEL.[ ] { types_one } 
	type:  CHANNEL.[ expr ] { types_one } 

	{  shift 39
	[  shift 40
	.  error


state 25
	type:  UNSTABLE.CHANNEL { types_one } 
	type:  UNSTABLE.CHANNEL [ ] { types_one } 
	type:  UNSTABLE.CHANNEL [ expr ] { types_one } 

	CHANNEL  shift 41
	.  error


state 26
	proc_def:  PROC IDENTIFIER (.parameters_zero ) { statements_zero } ; 
	parameters_zero: .    (90)

	IDENTIFIER  shift 36
	.  reduce 90 (src line 503)

	parameters_zero  goto 42
	parameters_one  goto 34
	parameter  goto 35

state 27
	init_block:  INIT { initvars_zero.} ; 

	}  shift 43
	.  error


state 28
	initvars_zero:  initvars_one.    (19)

	.  reduce 19 (src line 206)


state 29
	initvars_one:  initvar.    (20)
	initvars_one:  initvar., 
	initvars_one:  initvar., initvars_one 

	,  shift 44
	.  reduce 20 (src line 211)


state 30
	initvar:  IDENTIFIER.: type 
	initvar:  IDENTIFIER.: IDENTIFIER ( arguments_one ) 

	:  shift 45
	.  error


state 31
	data_def:  DATA IDENTIFIER { idents_one.} ; 

	}  shift 46
	.  error


state 32
	idents_one:  IDENTIFIER.    (87)
	idents_one:  IDENTIFIER., 
	idents_one:  IDENTIFIER., idents_one 

	,  shift 47
	.  reduce 87 (src line 489)


state 33
	module_def:  MODULE IDENTIFIER ( parameters_zero.) { module_body_zero } ; 

	)  shift 48
	.  error


state 34
	parameters_zero:  parameters_one.    (91)

	.  reduce 91 (src line 508)


state 35
	parameters_one:  parameter.    (92)
	parameters_one:  parameter., 
	parameters_one:  parameter., parameters_one 

	,  shift 49
	.  reduce 92 (src line 513)


state 36
	parameter:  IDENTIFIER.type 

	IDENTIFIER  shift 22
	CHANNEL  shift 24
	UNSTABLE  shift 25
	[  shift 23
	.  error

	type  goto 50

state 37
	const_def:  CONST IDENTIFIER type ASSIGN.expr ; 

	IDENTIFIER  shift 52
	NUMBER  shift 53
	SUB  shift 57
	NOT  shift 56
	TIMEOUT_RECV  shift 59
	NONBLOCK_RECV  shift 61
	TIMEOUT_PEEK  shift 60
	NONBLOCK_PEEK  shift 62
	TRUE  shift 54
	FALSE  shift 55
	(  shift 58
	[  shift 63
	.  error

	expr  goto 51

state 38
	type:  [ ].type 

	IDENTIFIER  shift 22
	CHANNEL  shift 24
	UNSTABLE  shift 25
	[  shift 23
	.  error

	type  goto 64

state 39
	type:  CHANNEL {.types_one } 

	IDENTIFIER  shift 22
	CHANNEL  shift 24
	UNSTABLE  shift 25
	[  shift 23
	.  error

	types_one  goto 65
	type  goto 66

state 40
	type:  CHANNEL [.] { types_one } 
	type:  CHANNEL [.expr ] { types_one } 

	IDENTIFIER  shift 52
	NUMBER  shift 53
	SUB  shift 57
	NOT  shift 56
	TIMEOUT_RECV  shift 59
	NONBLOCK_RECV  shift 61
	TIMEOUT_PEEK  shift 60
	NONBLOCK_PEEK  shift 62
	TRUE  shift 54
	FALSE  shift 55
	(  shift 58
	[  shift 63
	]  shift 67
	.  error

	expr  goto 68

state 41
	type:  UNSTABLE CHANNEL.{ types_one } 
	type:  UNSTABLE CHANNEL.[ ] { types_one } 
	type:  UNSTABLE CHANNEL.[ expr ] { types_one } 

	{  shift 69
	[  shift 70
	.  error


state 42
	proc_def:  PROC IDENTIFIER ( parameters_zero.) { statements_zero } ; 

	)  shift 71
	.  error


state 43
	init_block:  INIT { initvars_zero }.; 

	;  shift 72
	.  error


state 44
	initvars_one:  initvar ,.    (21)
	initvars_one:  initvar ,.initvars_one 

	IDENTIFIER  shift 30
	.  reduce 21 (src line 216)

	initvars_one  goto 73
	initvar  goto 29

state 45
	initvar:  IDENTIFIER :.type 
	initvar:  IDENTIFIER :.IDENTIFIER ( arguments_one ) 

	IDENTIFIER  shift 75
	CHANNEL  shift 24
	UNSTABLE  shift 25
	[  shift 23
	.  error

	type  goto 74

state 46
	data_def:  DATA IDENTIFIER { idents_one }.; 

	;  shift 76
	.  error


state 47
	idents_one:  IDENTIFIER ,.    (88)
	idents_one:  IDENTIFIER ,.idents_one 

	IDENTIFIER  shift 32
	.  reduce 88 (src line 494)

	idents_one  goto 77

state 48
	module_def:  MODULE IDENTIFIER ( parameters_zero ).{ module_body_zero } ; 

	{  shift 78
	.  error


state 49
	parameters_one:  parameter ,.    (93)
	parameters_one:  parameter ,.parameters_one 

	IDENTIFIER  shift 36
	.  reduce 93 (src line 518)

	parameters_one  goto 79
	parameter  goto 35

state 50
	parameter:  IDENTIFIER type.    (95)

	.  reduce 95 (src line 527)


state 51
	const_def:  CONST IDENTIFIER type ASSIGN expr.; 
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.XOR expr 
	expr:  expr.SHL expr 
	expr:  expr.SHR expr 
	expr:  expr.LAND expr 
	expr:  expr.LOR expr 
	expr:  expr.EQL expr 
	expr:  expr.LSS expr 
	expr:  expr.GTR expr 
	expr:  expr.NEQ expr 
	expr:  expr.LEQ expr 
	expr:  expr.GEQ expr 

	ADD  shift 81
	SUB  shift 82
	MUL  shift 83
	QUO  shift 84
	REM  shift 85
	AND  shift 86
	OR  shift 87
	XOR  shift 88
	SHL  shift 89
	SHR  shift 90
	LAND  shift 91
	LOR  shift 92
	EQL  shift 93
	LSS  shift 94
	GTR  shift 95
	NEQ  shift 96
	LEQ  shift 97
	GEQ  shift 98
	;  shift 80
	.  error


state 52
	expr:  IDENTIFIER.    (57)

	.  reduce 57 (src line 366)


state 53
	expr:  NUMBER.    (58)

	.  reduce 58 (src line 370)


state 54
	expr:  TRUE.    (59)

	.  reduce 59 (src line 374)


state 55
	expr:  FALSE.    (60)

	.  reduce 60 (src line 378)


state 56
	expr:  NOT.expr 

	IDENTIFIER  shift 52
	NUMBER  shift 53
	SUB  shift 57
	NOT  shift 56
	TIMEOUT_RECV  shift 59
	NONBLOCK_RECV  shift 61
	TIMEOUT_PEEK  shift 60
	NONBLOCK_PEEK  shift 62
	TRUE  shift 54
	FALSE  shift 55
	(  shift 58
	[  shift 63
	.  error

	expr  goto 99

state 57
	expr:  SUB.expr 

	IDENTIFIER  shift 52
	NUMBER  shift 53
	SUB  shift 57
	NOT  shift 56
	TIMEOUT_RECV  shift 59
	NONBLOCK_RECV  shift 61
	TIMEOUT_PEEK  shift 60
	NONBLOCK_PEEK  shift 62
	TRUE  shift 54
	FALSE  shift 55
	(  shift 58
	[  shift 63
	.  error

	expr  goto 100

state 58
	expr:  (.expr ) 

	IDENTIFIER  shift 52
	NUMBER  shift 53
	SUB  shift 57
	NOT  shift 56
	TIMEOUT_RECV  shift 59
	NONBLOCK_RECV  shift 61
	TIMEOUT_PEEK  shift 60
	NONBLOCK_PEEK  shift 62
	TRUE  shift 54
	FALSE  shift 55
	(  shift 58
	[  shift 63
	.  error

	expr  goto 101

state 59
	expr:  TIMEOUT_RECV.( arguments_one ) 

	(  shift 102
	.  error


state 60
	expr:  TIMEOUT_PEEK.( arguments_one ) 

	(  shift 103
	.  error


state 61
	expr:  NONBLOCK_RECV.( arguments_one ) 

	(  shift 104
	.  error


state 62
	expr:  NONBLOCK_PEEK.( arguments_one ) 

	(  shift 105
	.  error


state 63
	expr:  [.arguments_one ] 

	IDENTIFIER  shift 52
	NUMBER  shift 53
	SUB  shift 57
	NOT  shift 56
	TIMEOUT_RECV  shift 59
	NONBLOCK_RECV  shift 61
	TIMEOUT_PEEK  shift 60
	NONBLOCK_PEEK  shift 62
	TRUE  shift 54
	FALSE  shift 55
	(  shift 58
	[  shift 63
	.  error

	expr  goto 107
	arguments_one  goto 106

state 64
	type:  [ ] type.    (103)

	.  reduce 103 (src line 565)


state 65
	type:  CHANNEL { types_one.} 

	}  shift 108
	.  error


state 66
	types_one:  type.    (99)
	types_one:  type., 
	types_one:  type., types_one 

	,  shift 109
	.  reduce 99 (src line 547)


state 67
	type:  CHANNEL [ ].{ types_one } 

	{  shift 110
	.  error


state 68
	expr:  expr.ADD expr 
	expr:  expr.SUB expr 
	expr:  expr.MUL expr 
	expr:  expr.QUO expr 
	expr:  expr.REM expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.XOR expr 
	expr:  expr.SHL expr 
	expr:  expr.SHR expr 
	expr:  expr.LAND expr 
	expr:  expr.LOR expr 
	expr:  expr.EQL expr 
	expr:  expr.LSS expr 
	expr:  expr.GTR expr 
	expr:  expr.NEQ expr 
	expr:  expr.LEQ expr 
	expr:  expr.GEQ expr 
	type:  CHANNEL [ expr.] { types_one } 

	ADD  shift 81
	SUB  shift 82
	MUL  shift 83
	QUO  shift 84
	REM  shift 85
	AND  shift 86
	OR  shift 87
	XOR  shift 88
	SHL  shift 89
	SHR  shift 90
	LAND  shift 91
	LOR  shift 92
	EQL  shift 93
	LSS  shift 94
	GTR  shift 95
	NEQ  shift 96
	LEQ  shift 97
	GEQ  shift 98
	]  shift 111
	.  error


state 69
	type:  UNSTABLE CHANNEL {.types_one } 

	IDENTIFIER  shift 22
	CHANNEL  shift 24
	UNSTABLE  shift 25
	[  shift 23
	.  error

	types_one  goto 112
	type  goto 66

state 70
	type:  UNSTABLE CHANNEL [.] { types_one } 
	type:  UNSTABLE CHANNEL [.expr ] { types_one } 

	IDENTIFIER  shift 52
	NUMBER  shift 53
	SUB  shift 57
	NOT  shift 56
	TIMEOUT_RECV  shift 59
	NONBLOCK_RECV  shift 61
	TIMEOUT_PEEK  shift 60
	NONBLOCK_PEEK  shift 62
	TRUE  shift 54
	FALSE  shift 55
	(  shift 58
	[  shift 63
	]  shift 113
	.  error

	expr  goto 114

state 71
	proc_def:  PROC IDENTIFIER ( parameters_zero ).{ statements_zero } ; 

	{  shift 115
	.  error


state 72
	init_block:  INIT { initvars_zero } ;.    (17)

	.  reduce 17 (src line 195)


state 73
	initvars_one:  initvar , initvars_one.    (22)

	.  reduce 22 (src line 220)


state 74
	initvar:  IDENTIFIER : type.    (23)

	.  reduce 23 (src line 225)


state 75
	initvar:  IDENTIFIER : IDENTIFIER.( arguments_one ) 
	type:  IDENTIFIER.    (102)

	(  shift 116
	.  reduce 102 (src line 561)


state 76
	data_def:  DATA IDENTIFIER { idents_one } ;.    (8)

	.  reduce 8 (src line 156)


state 77
	idents_one:  IDENTIFIER , idents_one.    (89)

	.  reduce 89 (src line 498)


state 78
	module_def:  MODULE IDENTIFIER ( parameters_zero ) {.module_body_zero } ; 
	module_body_zero: .    (10)

	CONST  shift 10
	PROC  shift 11
	INIT  shift 12
	.  reduce 10 (src line 168)

	const_def  goto 119
	proc_def  goto 120
	init_block  goto 121
	module_body_zero  goto 117
	module_body  goto 118

state 79
	parameters_one:  parameter , parameters_one.    (94)

	.  reduce 94 (src line 522)


state 80
	const_def:  CONST IDENTIFIER type ASSIGN expr ;.    (15)

	.  reduce 15 (src line 183)

